[package]
name = "test_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = "1"
bytemuck_derive = "1"
pollster = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "22"
winit = { version = "0.30", features = ["rwh_06"] }
