[package]
name = "test_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = "1"
bytemuck_derive = "1"
image = "0.25"
math = { git = "https://github.com/Banyc/math.git", tag = "v0.0.11" }
num-traits = "0.2"
pollster = "0.3"
strict-num = "0.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "22"
winit = { version = "0.30", features = ["rwh_06"] }
